# fini

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml  release.yaml
HomebrewFormula/: fini.rb
src/: colors.rs  lib.rs  main.rs  normalize.rs  output.rs  progress.rs  walker.rs
src/config/: editorconfig.rs  file.rs  init.rs  merge.rs  mod.rs  toml_schema.rs
tests/: integration.rs
