[package]
name = "fini"
version = "0.1.0"
edition = "2021"
description = "A lightweight file normalization CLI tool for AI coding agents"
license = "MIT"
repository = "https://github.com/tsukasaI/fini"
homepage = "https://github.com/tsukasaI/fini"
readme = "README.md"
keywords = ["cli", "formatting", "normalize", "whitespace", "newline"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
indicatif = "0.17"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
similar = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
